# nimbus-chat

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  specialist_main.py
backend/app/: __init__.py  checkpointing.py  llm.py  settings.py  tracing.py
backend/app/orchestrator/: agent_card.py  api.py  callback.py  executor.py  graph.py  middleware.py  models.py  registry.py  routing.py  service.py  session.py
backend/app/specialist/: __init__.py  agent_card.py  builder.py  config.py  configs.py  executor.py  service.py  tavily.py  workflow.py
backend/app/specialist/nutrition/: __init__.py  config.py
backend/app/specialist/travel/: __init__.py  config.py
backend/nimbus_a2a/: __init__.py  agent_card.py  config.py  executor.py  server.py  tools.py
docs/: a2a-protocol.md  architecture.md  development.md  specialists.md  tracing.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css  vite-env.d.ts
frontend/src/app/: router.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/lib/: a2a-helpers.ts  a2a.ts  chat-stream.ts  env.ts  orchestrator-api.ts
frontend/src/routes/: home-page.tsx  not-found-page.tsx
