[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[fastapi,sqlite]>=1.1.0",
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.1",
    "honeyhive[openinference-langchain]>=1.2.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.1.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.22.1",
]
